--- a/SMPC-2019.html
+++ b/SMPC-2019.html
@@ -140,6 +140,102 @@
                                             </a>
                                             </p>
                     </div>
+		    <div id="contents" class="personnel2">
+                        <p align="center">主讲人</p>
+                                            <p align="center">(排名顺序不分先后)</p>
+                                            <p class="organization" align="center">Yan Huang<br/></p>
+                                            <p align="center">(University of Virginia)<br/></p>
+                                            <p class="organization" align="center">Liqun Chen<br/></p>
+											<p align="center">(University of Surrey)<br/></p>
+                                            <p class="organization" align="center">Bo Luo<br/></p>
+                                            <p align="center">(University of Kansas)<br/></p>
+                                            <p class="organization" align="center">Qiang Tang<br/></p>
+                                            <p align="center">(New Jersey Institute of Technology)<br/></p>
+                                            <p class="organization" align="center">kazuo Otha<br/></p>
+                                            <p align="center">(University of Electro Communications)<br/></p>
+                                            <p class="organization" align="center">XiaoFeng Wang<br/></p>
+                                            <p align="center">(Indiana University Bloomington)<br/></p>
+                                            <p class="organization" align="center">Chaoping Xing<br/></p>
+                                            <p align="center">(Nanyang Technological University)<br/></p>
+                                            <p class="organization" align="center">Yaochu Jin<br/></p>
+                                            <p align="center">(University of Surrey)<br/></p>
+                                            <p class="organization" align="center">QiuLiang Xu<br/></p>
+                                            <p align="center">(Shandong University)<br/></p>
+                                            <p class="organization" align="center">ZhenFu Cao<br/></p>
+                                            <p align="center">( East China Normal University )<br/></p>
+                                            <p class="organization" align="center">Lei Wang <br/></p>
+                                            <p align="center">(Shanghai Jiao Tong University)<br/></p>
+                                            <p class="organization " align="center">Fei Gao <br/></p>
+                                            <p align="center">(Beijing University of Posts and Telecommunications)<br/></p>
+                                            <br/><br/>
+                                            <p class="organization" align="center">筹备委员会<br/></p>
+                                            <p align="center">任奎 王杰 陈克非 林东岱<br/></p>
+                                            <p class="organization" align="center">论坛主席<br/></p>
+                                            <p align="center">秦湛 张秉晟<br/></p>
+                                            <p class="organization" align="center">论坛组织和筹备主席<br/></p>
+                                            <p align="center">蒋林智<br/></p>
+                                            <p class="organization" align="center">论坛承办单位<br/></p>
+                                            <p align="center">浙江大学 网络空间安全研究中心<br/></p>
+                        <!--                     <p class="organization">论坛协办单位<br/></p>
+                                            University of Surrey SSG <br/>
+                                            中国密码学会 密码数学理论专业委员会<br/>
+                                            中国保密学会 隐私保护专委会<br/><br/>
+                                            </p> -->
+                                            <p class="organization" align="center">会议举办地点<br/></p>
+                                            <p align="center">浙江大学邵逸夫科学馆<br/>
+                                            <a href="https://j.map.baidu.com/b0ZKP">
+                                                <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
+                                            </a>
+                                            </p>
+                    </div>
+		    <div id="contents" class="personnel3">
+                        <p align="center">主讲人</p>
+                                            <p align="center">(排名顺序不分先后)</p>
+                                            <p class="organization" align="center">Yan Huang<br/></p>
+                                            <p align="center">(University of Virginia)<br/></p>
+                                            <p class="organization" align="center">Liqun Chen<br/></p>
+											<p align="center">(University of Surrey)<br/></p>
+                                            <p class="organization" align="center">Bo Luo<br/></p>
+                                            <p align="center">(University of Kansas)<br/></p>
+                                            <p class="organization" align="center">Qiang Tang<br/></p>
+                                            <p align="center">(New Jersey Institute of Technology)<br/></p>
+                                            <p class="organization" align="center">kazuo Otha<br/></p>
+                                            <p align="center">(University of Electro Communications)<br/></p>
+                                            <p class="organization" align="center">XiaoFeng Wang<br/></p>
+                                            <p align="center">(Indiana University Bloomington)<br/></p>
+                                            <p class="organization" align="center">Chaoping Xing<br/></p>
+                                            <p align="center">(Nanyang Technological University)<br/></p>
+                                            <p class="organization" align="center">Yaochu Jin<br/></p>
+                                            <p align="center">(University of Surrey)<br/></p>
+                                            <p class="organization" align="center">QiuLiang Xu<br/></p>
+                                            <p align="center">(Shandong University)<br/></p>
+                                            <p class="organization" align="center">ZhenFu Cao<br/></p>
+                                            <p align="center">( East China Normal University )<br/></p>
+                                            <p class="organization" align="center">Lei Wang <br/></p>
+                                            <p align="center">(Shanghai Jiao Tong University)<br/></p>
+                                            <p class="organization " align="center">Fei Gao <br/></p>
+                                            <p align="center">(Beijing University of Posts and Telecommunications)<br/></p>
+                                            <br/><br/>
+                                            <p class="organization" align="center">筹备委员会<br/></p>
+                                            <p align="center">任奎 王杰 陈克非 林东岱<br/></p>
+                                            <p class="organization" align="center">论坛主席<br/></p>
+                                            <p align="center">秦湛 张秉晟<br/></p>
+                                            <p class="organization" align="center">论坛组织和筹备主席<br/></p>
+                                            <p align="center">蒋林智<br/></p>
+                                            <p class="organization" align="center">论坛承办单位<br/></p>
+                                            <p align="center">浙江大学 网络空间安全研究中心<br/></p>
+                        <!--                     <p class="organization">论坛协办单位<br/></p>
+                                            University of Surrey SSG <br/>
+                                            中国密码学会 密码数学理论专业委员会<br/>
+                                            中国保密学会 隐私保护专委会<br/><br/>
+                                            </p> -->
+                                            <p class="organization" align="center">会议举办地点<br/></p>
+                                            <p align="center">浙江大学邵逸夫科学馆<br/>
+                                            <a href="https://j.map.baidu.com/b0ZKP">
+                                                <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
+                                            </a>
+                                            </p>
+                    </div>
               <div id="main3" >
                    <style type="text/css">
                        table.tableizer-table {
