--- a/SMPC-2019.html
+++ b/SMPC-2019.html
@@ -241,7 +241,7 @@
                             border: 1px solid #CCC;
                             font-family: Arial, Helvetica, sans-serif;
 			    margin: 0 auto;
-/* 			    width: 80%; */
+			    width: 80%;
 			    height: 100%;
                         }
                         .tableizer-table td {
