--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -328,9 +328,9 @@
                                 </tbody>
                             </table>
 				<div class="footer4 removeborder">
-			 <p style="text-align:center;margin-top: -40px;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
-		</div> 
+		              </div> 
                         </div>
                     </div>
                 </div>
