--- a/CSAC-2018.html
+++ b/CSAC-2018.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="introduction-CSAC-2020.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <!--    <script src="https://unpkg.com/scrollreveal"></script>-->
-    <title>CSAC-2020</title>
+    <title>CSAC-2018</title>
     <style type="text/css">
 	.navbar-collapse li ul{
 			display:none;
@@ -80,8 +80,8 @@
             <div id="theme">
 <!--                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p> -->
-                <p style="text-align: center; margin-top: 10px;" >网络空间安全与应用密码学国际研讨会-2020</p>
-                <p style="text-align: center;text-indent:2em; " >-CSAC-2020</p>
+<!--                 <p style="text-align: center; margin-top: 10px;" ></p>
+                <p style="text-align: center;text-indent:2em; " ></p> -->
                 <hr/>
                 <p style="text-indent:2em; line-height:150%;"  >由华东师范大学计算机科学与软件工程学院主办的2018密码及其应用前沿学术论坛将于2018年6月8日至10日在上海市华东师范大学召开。会议旨在汇聚国内密码学和信息安全领域从事密码基础理论研究和密码应用技术研究的专家学者、行业精英、工程技术人员和在校研究生，共同探讨密码学和信息安全领域各方向的最新学术研究、以及研究发展动态。会议将邀请密码学与信息安全领域的多名国内专家学者作主题报告。<br/>
                 </p>
@@ -108,7 +108,7 @@
                 </div>
               </div>
 
-                <div id="contents" class="personnel3">
+                <div id="contents" class="personnel3" style="width: -10px;">
                     <div class="section">
                         <p align="left">主办单位：华东师范大学计算机科学与软件工程学院<br/></p>
                         <p align="left">会议时间：2018年6月8日至10日（6月8日下午注册）<br/></p>
@@ -192,7 +192,9 @@
                                 <p align="left">&emsp; &emsp;&emsp; 张凯（注册、会务），电话：18017541236，邮箱：zhangkaiecnu@163.com<br/></p>
                                 <p align="left">&emsp; &emsp;&emsp; 曾鸣（会务），电话：18720981811，邮箱：814331468@qq.com<br/></p>
                                 <p align="left">&emsp; &emsp;&emsp; 王陆平（财务），电话：18706703126，邮箱：18706703126@163.com<br/></p>
+				<p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                                 <p align="left">诚邀密码学及信息安全领域广大学者、业界精英、工程技术人员和在校研究生参会！<br/></p>
+				<p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                                 <p align="right">华东师范大学计算机科学与软件工程学院<br/></p>
                                 <p align="right">2018年4月30日<br/></p>
 						  </div>
@@ -213,8 +215,10 @@
 									  <p align="left">&emsp; &emsp;&emsp; 张凯（注册、会务），电话：18017541236，邮箱：zhangkaiecnu@163.com<br/></p>
 									  <p align="left">&emsp; &emsp;&emsp;曾鸣（会务），电话：18720981811，邮箱：814331468@qq.com<br/></p>
 									  <p align="left">&emsp; &emsp;&emsp; 王陆平（财务），电话：18706703126，邮箱：18706703126@163.com<br/></p>
+					                                  <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
 									  <p align="left">诚邀密码学及信息安全领域广大学者、业界精英、工程技术人员和在校研究生参会！<br/></p>
-									  <p align="right">华东师范大学计算机科学与软件工程学院<br/></p>
+									  <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
+					                                  <p align="right">华东师范大学计算机科学与软件工程学院<br/></p>
 									  <p align="right">2018年4月30日<br/></p>
 								</div>
                           </div>
@@ -235,13 +239,15 @@
                                           <p align="left">&emsp; &emsp;&emsp; 张凯（注册、会务），电话：18017541236，邮箱：zhangkaiecnu@163.com<br/></p>
                                           <p align="left">&emsp; &emsp;&emsp; 曾鸣（会务），电话：18720981811，邮箱：814331468@qq.com<br/></p>
                                           <p align="left">&emsp; &emsp;&emsp; 王陆平（财务），电话：18706703126，邮箱：18706703126@163.com<br/></p>
+					  <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                                           <p align="left">诚邀密码学及信息安全领域广大学者、业界精英、工程技术人员和在校研究生参会！<br/></p>
+					  <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                                           <p align="right">华东师范大学计算机科学与软件工程学院<br/></p>
                                           <p align="right">2018年4月30日<br/></p>
 									</div>
                           </div>
-				<div class="footer4 removeborder">
-			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+				<div class="footer4 removeborder" >
+			 <p style="text-align:center" style="width: -10px;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
 		              </div> 
                         </div>
