--- a/CSAC-2018.html
+++ b/CSAC-2018.html
@@ -142,7 +142,7 @@
                             text-align: center;
                         }
                     </style>
-                    <table class="tableizer-table" >
+                    <table class="tableizer-table" style="margin-top: -80px;">
                         <tbody>
                         <tr ><td style="width: 335px;">来学嘉（上海交通大学）</td><td style="width:335px;">陈克非（杭州师范大学）</td></tr>
 						<tr><td style="width: 335px;">吴文玲（中科院软件所）</td><td style="width: 335px;">冯荣权（北京大学）</td></tr>
@@ -246,8 +246,8 @@
                                           <p align="right">2018年4月30日<br/></p>
 									</div>
                           </div>
-				<div class="footer4 removeborder" >
-			 <p style="text-align:center" style="width: -10px;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+				<div class="footer4 removeborder" style="width: -50px;">
+			 <p style="text-align:center" ><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
 		              </div> 
                         </div>
