--- a/CSAC-2018.html
+++ b/CSAC-2018.html
@@ -95,7 +95,6 @@
                     <p align="left">会议时间：2018年6月8日至10日（6月8日下午注册）<br/></p>
                     <p align="left">会议地点：上海江苏饭店（上海市普陀区武宁路888号）<br/></p>
                     <p align="left">会议主席：曹珍富（华东师范大学）、钱海峰（华东师范大学）<br/></p>
-					<p align="left">会议组委会<br/></p>
               </div>
 			  </div>
                 <div id="contents" class="personnel2">
@@ -104,7 +103,6 @@
                     <p align="left">会议时间：2018年6月8日至10日（6月8日下午注册）<br/></p>
                     <p align="left">会议地点：上海江苏饭店（上海市普陀区武宁路888号）<br/></p>
                     <p align="left">会议主席：曹珍富（华东师范大学）、钱海峰（华东师范大学）<br/></p>
-					<p align="left">会议组委会<br/></p>
                 </div>
               </div>
 
@@ -114,7 +112,6 @@
                         <p align="left">会议时间：2018年6月8日至10日（6月8日下午注册）<br/></p>
                         <p align="left">会议地点：上海江苏饭店（上海市普陀区武宁路888号）<br/></p>
                         <p align="left">会议主席：曹珍富（华东师范大学）、钱海峰（华东师范大学）<br/></p>
-						<p align="left">会议组委会<br/></p>
                     </div>
               </div>
                 <div id="main3" >
@@ -143,6 +140,9 @@
                         }
                     </style>
                     <table class="tableizer-table" style="margin-top: -80px;">
+			    <div class="section">
+			    <p align="left">会议组委会<br/></p>
+				 </div>   
                         <tbody>
                         <tr ><td style="width: 335px;">来学嘉（上海交通大学）</td><td style="width:335px;">陈克非（杭州师范大学）</td></tr>
 						<tr><td style="width: 335px;">吴文玲（中科院软件所）</td><td style="width: 335px;">冯荣权（北京大学）</td></tr>
