--- a/CC-2020.html
+++ b/CC-2020.html
@@ -195,7 +195,7 @@
                             text-align: center;
                         }
                     </style>
-                    <table class="tableizer-table">
+                    <table class="tableizer-table" style="margin-top: -80px;">
                         <thead><tr class="tableizer-firstrow"><td>时间</td><td colspan="3">会议报告</td</tr></thead>
                         <tbody>
                         <tr><th colspan="4">06月20日（会议地点：网络视频会议室）</th></tr>
@@ -329,7 +329,7 @@
 										</table>
 										</br>
 				<div class="footer4 removeborder">
-			 <p style="text-align:center;margin-top: -40px;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			 <p style="text-align:center;margin-top: -60px;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
 		</div> 
                         </div>
