--- a/CC-2021.html
+++ b/CC-2021.html
@@ -1,1 +1,256 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--
+    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    -->
+    <script src="js/2.1.1/jquery.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="introduction-CSAC-2020.css"/>
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <!--    <script src="https://unpkg.com/scrollreveal"></script>-->
+    <title>CC-2021</title>
+    <style type="text/css">
+	.navbar-collapse li ul{
+			display:none;
+			height:auto;
+			width: auto;
+			position:absolute;
+			width:100px;
+			z-index:200;
+			margin:0px;
+			list-style-type: none;
+		}
+	.navbar-collapse li:hover ul{
+			display:block;
+		}
+	 .section{
+		 margin: 0 22%;
+	    }
+	</style>
+</head>
 
+<body background="image/会议背景11.jpg">
+<div >
+    <header style="min-height: 76px;">
+        <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                        <span class="sr-only">切换导航</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!--                             <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/SHDIpic.PNG"></a>  -->
+                </div>
+                <div id="navbar-collapse" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-center">
+                        <li><a href="index.html">
+                            <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
+                             <li class="submenu">
+                                    <a href="News.html">News</a>
+                                </li>
+                                <li class="submenu">
+				<a href="Conference.html">Conferences</a>
+			</li>
+                        <li class="submenu">
+                            <a href="Training-Camp.html">Training Camp</a>
+                        </li>
+                        <li class="submenu">
+                               <a href="Research.html">Research</a>
+                         </li>
+			 <li class="submenu">
+                               <a href="About us Introduction.html">About us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div><!-- /.container-->
+        </nav>
+    </header>
+    <div id="introdution">
+        <div class="introdution">
+            <div id="theme">
+<!--                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
+                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p> -->
+                <p style="text-align: center; margin-top: 10px;" >International Code and Cryptography Symposium-2021</p>
+                <p style="text-align: center;text-indent:2em; " >-密码与编码前沿国际学术研讨会-2021</p>
+                <hr/>
+                <p style="text-indent:2em; line-height:150%;"  >密码与编码前沿国际研讨会-2021(CCC-2021)将于2021年06月19日-2021年06月20日举行。本届国际研讨会将邀请20位海内外著名学者做特邀报告(40分钟)，特邀报告涉及领域包括：编码理论与应用，密码理论与应用，密码算法的硬件实现与安全，量子通信与量子计算，后量子密码与应用，区块链与应用，大数据与隐私保护等热点研究领域。研讨会采用网络视频会议形式举行；同时，本届会议招收数名“密码与编码”(CCS)与“后量子密码理论与应用实现”(PQC)暑期班学员。热烈欢迎相关研究领域的老师，博士生/硕士生和相关从业人员参加。<br/>
+                </p>
+            </div>
+        </div>
+        <div class="main2">
+            <div id="main2">
+                <div id="contents" class="personnel1">
+                    <p align="center" class="organization">会议主席<br/></p>
+                    <p align="center">冯荣权<br/></p>
+                    <p class="organization" align="center">会议组委会(排名不分先后顺序)：<br/></p>
+                    <p align="center">来学嘉&nbsp&nbsp陈克非&nbsp&nbsp吴文玲&nbsp&nbsp林东岱&nbsp&nbsp冯荣权&nbsp&nbsp邢朝平&nbsp&nbsp徐茂智&nbsp&nbsp曹珍富<br/></p>
+                    <p align="center">张玉清&nbsp&nbsp刘凤梅&nbsp&nbsp符方伟&nbsp&nbsp许春香&nbsp&nbsp薛&emsp;锐&nbsp&nbsp胡&emsp;磊&nbsp&nbsp张福泰&nbsp&nbsp朱士信<br/></p>
+                    <p align="center">王美琴&nbsp&nbsp杜小妮&nbsp&nbsp王彩芬&nbsp&nbsp陆荣幸&nbsp&nbsp唐元生&nbsp&nbsp唐春明&nbsp&nbsp黄欣沂&nbsp&nbsp李洪伟<br/></p>
+                    <p align="center">陈立全&nbsp&nbsp许春根&nbsp&nbsp张&emsp;磊&nbsp&nbsp罗&emsp;勃&nbsp&nbsp杨&emsp;侃&nbsp&nbsp陈利群&nbsp&nbsp贾春福&nbsp&nbsp孙智立<br/></p>
+                    <br/><br/>
+                    <p class="organization" align="center">会议程序委员会主席<br/></p>
+                    <!--                        蒋林智（University of Surrey）林璟锵<br/><br/>-->
+					<p align="center">蒋林智<br/></p>
+		    <div class="section">
+                    <p align="left">会议主办单位: EPAIAC Innovation Alliance EU<br/></p>
+                    <p align="left">会议承办单位：University of Surrey SSG   DFSC信息研发中心<br/></p>
+                    <p align="left">会议举办时间：2021年06月19日-2021年06月20日<br/></p>
+                </div>
+              </div>
+                <div id="contents" class="personnel2">
+                    <p align="center" class="organization">会议主席<br/></p>
+                            <p align="center">冯荣权<br/></p>
+                            <p class="organization" align="center">会议组委会(排名不分先后顺序)：<br/></p>
+                            <p align="center">来学嘉&nbsp&nbsp陈克非&nbsp&nbsp吴文玲&nbsp&nbsp林东岱&nbsp&nbsp冯荣权&nbsp&nbsp邢朝平&nbsp&nbsp徐茂智&nbsp&nbsp曹珍富<br/></p>
+                            <p align="center">张玉清&nbsp&nbsp刘凤梅&nbsp&nbsp符方伟&nbsp&nbsp许春香&nbsp&nbsp薛&emsp;锐&nbsp&nbsp胡&emsp;磊&nbsp&nbsp张福泰&nbsp&nbsp朱士信<br/></p>
+                            <p align="center">王美琴&nbsp&nbsp杜小妮&nbsp&nbsp王彩芬&nbsp&nbsp陆荣幸&nbsp&nbsp唐元生&nbsp&nbsp唐春明&nbsp&nbsp黄欣沂&nbsp&nbsp李洪伟<br/></p>
+                            <p align="center">陈立全&nbsp&nbsp许春根&nbsp&nbsp张&emsp;磊&nbsp&nbsp罗&emsp;勃&nbsp&nbsp杨&emsp;侃&nbsp&nbsp陈利群&nbsp&nbsp贾春福&nbsp&nbsp孙智立<br/></p>
+                            <br/><br/>
+                            <p class="organization" align="center">会议程序委员会主席<br/></p>
+                            <!--                        蒋林智（University of Surrey）林璟锵<br/><br/>-->
+                    		<p align="center">蒋林智<br/></p>
+                    <div class="section">
+                            <p align="left">会议主办单位: EPAIAC Innovation Alliance EU<br/></p>
+                            <p align="left">会议承办单位：University of Surrey SSG   DFSC信息研发中心<br/></p>
+                            <p align="left">会议举办时间：2021年06月19日-2021年06月20日<br/></p>
+                        </div>
+              </div>
+
+                <div id="contents" class="personnel3">
+                    <p align="center" class="organization">会议主席<br/></p>
+                            <p align="center">冯荣权<br/></p>
+                            <p class="organization" align="center">会议组委会(排名不分先后顺序)：<br/></p>
+                            <p align="center">来学嘉&nbsp&nbsp陈克非&nbsp&nbsp吴文玲&nbsp&nbsp林东岱&nbsp&nbsp冯荣权&nbsp&nbsp邢朝平&nbsp&nbsp徐茂智&nbsp&nbsp曹珍富<br/></p>
+                            <p align="center">张玉清&nbsp&nbsp刘凤梅&nbsp&nbsp符方伟&nbsp&nbsp许春香&nbsp&nbsp薛&emsp;锐&nbsp&nbsp胡&emsp;磊&nbsp&nbsp张福泰&nbsp&nbsp朱士信<br/></p>
+                            <p align="center">王美琴&nbsp&nbsp杜小妮&nbsp&nbsp王彩芬&nbsp&nbsp陆荣幸&nbsp&nbsp唐元生&nbsp&nbsp唐春明&nbsp&nbsp黄欣沂&nbsp&nbsp李洪伟<br/></p>
+                            <p align="center">陈立全&nbsp&nbsp许春根&nbsp&nbsp张&emsp;磊&nbsp&nbsp罗&emsp;勃&nbsp&nbsp杨&emsp;侃&nbsp&nbsp陈利群&nbsp&nbsp贾春福&nbsp&nbsp孙智立<br/></p>
+                            <br/><br/>
+                            <p class="organization" align="center">会议程序委员会主席<br/></p>
+                            <!--                        蒋林智（University of Surrey）林璟锵<br/><br/>-->
+                    		<p align="center">蒋林智<br/></p>
+                    <div class="section">
+                            <p align="left">会议主办单位: EPAIAC Innovation Alliance EU<br/></p>
+                            <p align="left">会议承办单位：University of Surrey SSG   DFSC信息研发中心<br/></p>
+                            <p align="left">会议举办时间：2021年06月19日-2021年06月20日<br/></p>
+                        </div>
+              </div>
+                <div id="main3" >
+                    <style type="text/css">
+                        table.tableizer-table {
+                            border: 1px solid #CCC;
+                            font-family: Arial, Helvetica, sans-serif;
+			    margin: 0 auto;
+/* 			    width: 80%; */
+			    height: 100%;
+                        }
+                        .tableizer-table td {
+                            padding: 4px;
+                            margin: 3px;
+                            max-width: 500px;
+                            border: 1px solid #CCC;
+                        }
+                        .tableizer-table th {
+                            background-color: #104E8B;
+                            padding: 4px;
+                            margin: 3px;
+                            max-width: 500px;
+                            color: #FFF;
+                            font-weight: bold;
+                            text-align: center;
+                        }
+                    </style>
+                    <table class="tableizer-table" style="margin-top: -50px;">
+                        <thead><tr class="tableizer-firstrow"><td>时间</td><td colspan="3">会议报告</td></tr></thead>
+                        <tbody>
+                        <tr><td>08月28日<br></td><td colspan="3">会议报到&nbsp;&nbsp;腾讯网络会议室</td></tr>
+                        <tr><th colspan="4">06月19日（会议地点：网络视频会议室）</th></tr>
+                        <tr><th>&nbsp;8:00 - 8:30</th><th colspan="3">会议主席致辞（冯克勤 ）</th></tr>
+						<tr class="tableizer-firstrow"><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th></tr>
+                        <tr><td>&nbsp;08:30-09:10</td><td>隐私计算的密码学思维</td><td>曹珍富</td><td rowspan="2">冯克勤</td></tr>
+                        <tr><td>&nbsp;09:10-09:50</td><td>Goppa码的一些编码性质</td><td>岳&emsp;勤</td></tr>
+                            <tr><th>09:50-10:00</td><td colspan="3">茶歇</th></tr>
+                        <tr><td>&nbsp;10:00-10:40</td><td>Three new constructions of asymptotically optimal PQCSS with small alphabet sizes</td><td>曹喜望</td><td rowspan="3">贾春福</td></tr>
+                        <tr><td>10:40-11:20</td><td>Enhancing Cryptography Security with Quantum Technology: Recent Progress in Quantum Secure Direct Communication</td><td>龙桂鲁</td></tr>
+                        <tr><td>11:20-12:00</td><td>An Overview of Quantum Algorithms in Cryptography</td><td>马文平</td></tr>
+                        <tr><th colspan="4">午餐（自理）</th></tr>
+                        <tr><td>14:00-14:40</td><td>Verifiable Capacity-bound Functions: A New Primitive from Kolmogorov Complexity</td><td>Long&emsp;Chen</td><td rowspan="2">高&emsp;思</td></tr>
+                        <tr><td>14:40-15:20</td><td>Secure Computation & Data Sketching: a Happy Marriage</td><td>Changyu Dong</td></tr>
+                        <tr><th>15:20-15:30</th><th colspan="3">茶歇</th></tr>
+                        <tr><td>15:30-16:10</td><td>SEAL: sealed-bid auction without auctioneers</td><td>Feng&emsp;Hao</td><td rowspan="3">张福泰</td></tr>
+                        <tr><td>16:10-16:50</td><td>Observer-Resistant Password Systems: How hard to make them both usable and secure?</td><td>Shunjun Li</td></tr>
+                        <tr><td>16:50-17:30</td><td>Dictionary Learning and Sparse Signal Recovery for Nonlinear Compressive Measurements</td><td>Wenwu Wang</td></tr>
+                        <tr><th colspan="4">06月20日（会议地点：网络视频会议室）</th></tr>
+						<tr class="tableizer-firstrow"><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th></tr>
+                        <tr><td>&nbsp;08:30-09:10</td><td>Security and Privacy in Voice Assistant Systems</td><td>Xiaohui Liang</td><td rowspan="2">蒋林智</td></tr>
+                        <tr><td>&nbsp;09:10-09:50</td><td>Data Quality Improvement and Learning with Crowdsourcing</td><td>Victor S. Sheng</td></tr>
+                             <tr><th>09:50-10:00</th><th colspan="3">茶歇</th></tr>
+                        <tr><td>&nbsp;10:00-10:40</td><td>密码杂凑算法标准 SHA-3分析进展</td><td>刘美成</td><td rowspan="3">陈&emsp;隆</td></tr>
+                        <tr><td>10:40-11:20</td><td>Rotational cryptanalysis in a differential-linear perspective</td><td>Yunwen Liu</td></tr>
+                        <tr><td>11:20-12:00</td><td>Towards Efficient Privacy-Preserving Inspection of TLS Encrypted Traffic</td><td>宁建廷</td></tr>
+                        <tr><th colspan="4">午餐（自理）</th></tr>
+                        <tr><td>14:00-14:40</td><td>拟态构造蜜罐研究</td><td>胡先君</td><td rowspan="2">余宏杰</td></tr>
+                        <tr><td>14:40-15:20</td><td>The definition, detection and quantification of quantum nonlocality  </td><td>苏兆峰</td></tr>
+                        <tr><th>15:20-15:30</th><th colspan="3">茶歇</th></tr>
+                        <tr><td>15:30-16:10</td><td>An Instruction Set Extension to Support Software-Based Masking </td><td>高&emsp;思</td><td rowspan="2">曹&emsp;浩</td></tr>
+                        <tr><td>16:10-16:50</td><td>Post-quantum Crypto scheme Application and Implementation</td><td>蒋林智/td></tr>
+                        </tbody>
+                    </table>
+                    </br></br>
+				<div class="footer4 removeborder">
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			
+		              </div> 
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    let up1=document.getElementById('up1'),
+        down2=document.getElementById('down2');
+    //跨浏览器兼容事件处理器
+    var addHandler=function(element,type,handler){
+        if(addEventListener){
+            element.addEventListener(type,handler,false);
+        }
+        else if(attachEvent){
+            element.attachEvent('on'+type,handler);
+        }
+        else{
+            element['on'+type]=handler;
+        }
+    }
+    //向下图标的鼠标事件及点击事件监听器
+    addHandler(up1,"mouseover",()=>up1.style.border="2px solid wheat");
+
+    addHandler(up1,"click",()=>up1.style.border="2px dotted wheat");
+
+    addHandler(up1,"mouseout",()=>up1.style.border="");
+
+    addHandler(down2,"mouseover",()=>down2.style.border="2px solid wheat");
+
+    addHandler(down2,"click",()=>down2.style.border="2px dotted wheat");
+
+    addHandler(down2,"mouseout",()=>down2.style.border="");
+    window.sr = ScrollReveal().reveal('#introdution,#speaker,#contents,#button');
+</script>
+<script type="text/javascript">
+         function googleTranslateElementInit() {
+         new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>
+</body>
+</html>
