--- a/CC-2021.html
+++ b/CC-2021.html
@@ -178,7 +178,7 @@
 						<tr class="tableizer-firstrow"><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th></tr>
                         <tr><td>&nbsp;08:30-09:10</td><td>隐私计算的密码学思维</td><td>曹珍富</td><td rowspan="2">冯克勤</td></tr>
                         <tr><td>&nbsp;09:10-09:50</td><td>Goppa码的一些编码性质</td><td>岳&emsp;勤</td></tr>
-                            <tr><th>09:50-10:00</td><td colspan="3">茶歇</th></tr>
+                            <tr><th>09:50-10:00</th><th colspan="3">茶歇</th></tr>
                         <tr><td>&nbsp;10:00-10:40</td><td>Three new constructions of asymptotically optimal PQCSS with small alphabet sizes</td><td>曹喜望</td><td rowspan="3">贾春福</td></tr>
                         <tr><td>10:40-11:20</td><td>Enhancing Cryptography Security with Quantum Technology: Recent Progress in Quantum Secure Direct Communication</td><td>龙桂鲁</td></tr>
                         <tr><td>11:20-12:00</td><td>An Overview of Quantum Algorithms in Cryptography</td><td>马文平</td></tr>
