--- a/SMPC-2021.html
+++ b/SMPC-2021.html
@@ -84,7 +84,7 @@
                 <p style="text-align: center;text-indent:2em; " >-第四届安全多方计算国际前沿学术论坛（SMPC）-2021</p>
                 <hr/>
                 <p style="text-indent:2em; line-height:150%;"  >为了对安全多方计算的研究现状、未来及应用展开交流和讨论，由EAPIAC Innovation Alliance举办，DFSC信息研发中心与University of Surrey SSG承办的“SMPC安全多方计算国际前沿学术论坛-2021”将于2021年03月27日至2021年03月28日在DFSC信息研发中心举办（网络视频会议）。同时，举办“SMPC安全多方计算及其应用”春季训练营和“ADC密码前沿”春季训练营。我们诚挚邀请海内外从事相关领域研究和落地应用的单位、学者和博士、硕士研究生参加本届论坛和春季训练营。现将有关事项通知如下：<br/>
-                &nbsp; &nbsp; &nbsp; &nbsp;本届SMPC安全多方计算国际前沿论坛将邀请来自丹麦、英国、加拿大、香港、美国和中国的10余位国内外从事安全多方计算等领域研究的国际著名学者做特邀报告，每位学者将进行45分钟的相关报告。报告的主题涉及以下几个领域：<br/>
+                &nbsp; &nbsp; 本届SMPC安全多方计算国际前沿论坛将邀请来自丹麦、英国、加拿大、香港、美国和中国的10余位国内外从事安全多方计算等领域研究的国际著名学者做特邀报告，每位学者将进行45分钟的相关报告。报告的主题涉及以下几个领域：<br/>
                 &nbsp; &nbsp; &nbsp; &nbsp;(1) 安全多方计算的理论研究及其进展<br/>
                 &nbsp; &nbsp; &nbsp; &nbsp;(2) 安全多方计算的应用（区块链、物联网和可信计算等）<br/>
                 &nbsp; &nbsp; &nbsp; &nbsp;(3) 人工智能与安全<br/>
