--- a/QPQC-2017.html
+++ b/QPQC-2017.html
@@ -99,39 +99,22 @@
 			                <p style="text-align: center; margin-top: 10px;" >题目：Faster Bootstrapping with Multiple Addends</p>
 			                    <hr/>
 			                	<p style="text-indent:2em; line-height:150%;"  >摘要：As an important cryptographic primitive in cloud computing and outsourced computation, fully homomorphic encryption (FHE) is an animated area of modern cryptography. However, the efficiency of FHE has been a bottleneck that impeding its application. According to Gentry’s blueprint, bootstrapping, which is used to decrease ciphertext errors, is the most important process in FHE. However, bootstrapping is also the most expensive process that affecting the efficiency of the whole system. Firstly, we notice that, hundreds of serial homomorphic additions take most of the time of bootstrapping. We made use of the properties of Boolean circuit to reduce the number of serial homomorphic additions by two third, and thus constructed an efficient FHE scheme with bootstrapping in 12ms. Secondly, the most expensive parts in our bootstrapping, EHCM and serial homomorphic additions, can be accelerated by parallel. This parallel may accelerate the bootstrapping. At last, we found a set of more efficient combination of parameters for our scheme. As a result, our security parameter level is 128 bits and the correctness is elevated, compared with TFHE scheme in ASIACRYPT 2016. Experiments show that the running time of our bootstrapping is 12ms, which is only 23 percent of TFHE, and is less than CGGI17.<br/>
-			                	&nbsp; &nbsp;报告人简介：周潭平，中国人民武装警察部队工程大学在读博士；2012年本科毕业中国人民武装警察部队工程大学，2014年硕士毕业于中国人民武装警察部队工程大学，2015年至今攻读中国人民武装警察部队工程大学的密码学博士学位。先后在密码方面发表论文和专利近10篇，参与申请国家重点研发计划，国家自然科学基金等4个项目。目前研究兴趣：全同态加密的构造与应用。<br/>
+			                	&nbsp; &nbsp;报告人简介：周潭平博士。<br/>
 			                    <p style="text-align: center; margin-top: 10px;" >题目：基于不同密钥的密文同态运算</p>
 			                        <hr/>
 			                    	<p style="text-indent:2em; line-height:150%;"  >摘要：传统的同态加密方案都是单密钥的，即参与同态运算的密文都是用同一个密钥加密得到的。但在某些特殊场景中，如分布式计算或匿名计算中，很难要求参与同态运算的密文都用同一个密钥加密。这就提出了一个问题，能否允许基于不同密钥的密文进行运算？或者，能否将其转换为单密钥情形？
                                     <p style="text-indent:2em; line-height:150%;"  >根据不同的应用场景，我们重点介绍两个方面的内容：</p>
 <p style="text-indent:2em; line-height:150%;"  >1、多密钥全同态加密方案的构造。主要介绍现有的几种代表性思路。</p>
 <p style="text-indent:2em; line-height:150%;"  >2、利用不经意传输等工具对基于不同密钥的密文进行保密运算。主要围绕生物特征保密识别过程，分析基于不同密钥的密文如何进行(计算距离等)运算。<br/>
-			                    	&nbsp; &nbsp;报告人简介：丁勇，男，博士，教授，中国密码会高级会员，中国密码学会安全协议专委会委员，广西信息安全学会副理事长，桂林电子科技大学计算机与信息安全学院院副院长，广西密码学与信息安全重点实验室主任，第七届中国信息安全博士论坛副主席，ISPEC2014，TRUSTCOM2015等国际知名会议程序委员。主要研究方向为信息安全、大数据、物联网等。1975年6月出生，1998年毕业于四川大学数学系。1998年到桂林电子科技大学工作。2000年到2005年在西安电子科技大学硕博连读，并于2005年6月获该校密码学博士学位。主要从事无线网络安全、椭圆曲线密码体系、可证明安全性研究等。先后在西安电子科技大学ISN国家重点实验室攻读博士学位，中兴通讯有限公司技术中心研究信息安全实验室实习，香港城市大学电脑工程与信息技术系做助理研究，NEC中国研究院访问,香港城市大学计算机系Research Fellow。近几年来在国内外核心期刊和国际会议上以发表论文60余篇，其中SCI/EI检索30余篇，出版学术专著1部，工信部规划教材1部。以第一发明人申请中国专利8项（6项已获授权），国际专利2项（已获授权）。主持包括国家自然科学基金、广西区自然科学基金等10余项纵横向基金。
+			                    	&nbsp; &nbsp;报告人简介：丁勇，男，博士，教授。
 <br/>
 			        </div>
 			</div>
         </div>
-<div id="contents" class="personnel1">
-					<div class="section">
-					        <p align="left">顺丰公司代表：<br/></p>
-					        <p align="left">吕聪，男，本科学历，顺丰速运有限公司信息安全工程师，从事应用安全检测、敏感数据防护、加解密系统建设和运维工作。联系方式13510549890。<br/></p>
-							<p align="left">刘玉霞，女，本科学历，顺丰速运有限公司信息安全资深工程师，从事信息安全工作10余年，目前负责信息安全等级保护、敏感数据安全保护和IT系统数据治理工作。联系方式13760391205。<br/></p>
-					    </div>
-					  </div>
-					    <div id="contents" class="personnel2">
-					        		    <div class="section">
-					        		            <p align="left">顺丰公司代表：<br/></p>
-					        		                <p align="left">吕聪，男，本科学历，顺丰速运有限公司信息安全工程师，从事应用安全检测、敏感数据防护、加解密系统建设和运维工作。联系方式13510549890。<br/></p>
-					        		            	<p align="left">刘玉霞，女，本科学历，顺丰速运有限公司信息安全资深工程师，从事信息安全工作10余年，目前负责信息安全等级保护、敏感数据安全保护和IT系统数据治理工作。联系方式13760391205。<br/></p>
-					        		            </div>
+
 					  </div>
 					
-					    <div id="contents" class="personnel3">
-					        		    <div class="section">
-					                            <p align="left">顺丰公司代表：<br/></p>
-					                                <p align="left">吕聪，男，本科学历，顺丰速运有限公司信息安全工程师，从事应用安全检测、敏感数据防护、加解密系统建设和运维工作。联系方式13510549890。<br/></p>
-					                            	<p align="left">刘玉霞，女，本科学历，顺丰速运有限公司信息安全资深工程师，从事信息安全工作10余年，目前负责信息安全等级保护、敏感数据安全保护和IT系统数据治理工作。联系方式13760391205。<br/></p>
-					                            </div>
+					   
 					  </div>
 <div class="footer4 removeborder">
 			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
