--- a/CC-2019.html
+++ b/CC-2019.html
@@ -79,8 +79,8 @@
         </nav>
     </header>
     <div id="introdution">
-        <div class="introdution">
-            <div id="theme">
+        <div class="main2">
+            <div id="main2">
                             <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                             <p style="text-indent:2em ">密码和编码是通信领域实现数据安全、数据存储和传输的重要保障。为了对密码与编码理论的研究现状、未来及应用进行交流和讨论，由桂林电子科技大学计算机与信息安全学院、广西密码学与信息安全重点实验室承办的“密码与编码及其应用前沿论坛-2019”将于2019年6月9日至2019年6月10日在桂林电子科技大学10教510举行。我们诚挚邀请您莅临本次论坛。<br/>
                                 &nbsp; &nbsp; &nbsp; &nbsp;现将有关事项通知如下：本次论坛将邀请国内外多位从事密码与编码理论和应用研究的著名专家、青年学者做特邀报告，报告聚焦密码学和编码学理论和应用的前沿研究。每位专家和学者将进行40分钟的相关报告，就相关问题开展交流与探讨。<br/>
