--- a/SMPC Introduction.html
+++ b/SMPC Introduction.html
@@ -94,7 +94,7 @@
 		    <div class="footer2 removeborder">
 		    <p style="text-indent:2em ">Invited talks including the following topics: (1) Data security and privacy-preserving theory, implemenation and application; (2) Data security and users privacy in the quantum world.</a><br/>
               
-		    <p style="text-indent:2em "><a href="SMPC-2018.html">DSPP-2018</a>DSPP-2018</a>&nbsp; &nbsp; ||&nbsp; &nbsp;  <a href="SMPC-2019.html">DSPP-2019</a><br/>
+		    <p style="text-indent:2em "><a href="SMPC-2018.html">DSPP-2018</a>&nbsp; &nbsp; ||&nbsp; &nbsp;  <a href="SMPC-2019.html">DSPP-2019</a><br/>
                     <p style="text-indent:2em "> <a href="SMPC-2020.html">DSPP-2020</a> &nbsp; &nbsp; ||&nbsp; &nbsp; <a href="SMPC-2021.html">DSPP-2021</a><br/>
 		    
 		    </div>
